# gzhu-computer-network-experiment

./: README.md  carry_rule  完整学号_姓名_01.docx  完整学号_姓名_03.docx  完整学号_姓名_04.docx  完整学号_姓名_05.docx  网络实验指导.doc
net-exp-bridge/: .gitignore  Cargo.toml
net-exp-bridge-analysis/: .gitignore  analysis.ipynb  datagen.py
net-exp-bridge/src/: lib.rs
net-exp-checksum/: .gitignore  Cargo.toml
net-exp-checksum/src/: main.rs
net-exp-report1/: 01.docx
net-exp-report3/: 03.docx
net-exp-report4/: 04.docx  exp3-configured-rip.pkt  exp3-configured.pkt
net-exp-report5/: 05.docx
net-exp-report5/graphs/: bridge.drawio  checksum.drawio
net-exp-wireshark/: ip-icmp-arp.pcapng  www-baidu-filtered.pcapng  www-wur-filtered.pcapng  www-wur-filtered2.pcapng
